# uf-prot

./: .gitignore  README.md  main.py  pyproject.toml  run_pipeline.sh  run_pipeline_parallel.sh
config/: pipeline.example.json  pipeline.json
experiments/: bench_decode_tokens.sh  bench_s3_clients.py  compare_s3_bulk.sh
scripts/00_setup/: install.sh  install_packages.R  install_sharepro.sh
scripts/01_outcome_prep/: prep_kim.py
scripts/02_cis_pqtl_extract/: aric.py  decode.py  fenland.py  protonexus_unpack.py  ukb_female.py  ukbppp.py
scripts/03_clump/: clump.py
scripts/04_liftover/: instruments_to_hg38.py
scripts/05_harmonise/: harmonise.py
scripts/06_mr/: run_mr.R
scripts/07_sensitivity/: run_sensitivity.R
tests/: conftest.py  gwas_oracle_harness.py  proxy_test.txt  test_000_assets_required.py  test_aric_extractor.py  test_assemble.py  test_blackbox_sim_cli.py  test_build_consistency.py  test_checkpoint.py  test_cis.py  test_cis_extract_pipeline.py  test_clump.py  test_coloc_abf_alignment.py  test_config.py  test_cross_cohort.py  test_decode_extractor.py  test_decode_stream.py  test_e2e_smoke.py  test_extract_regions.py  test_fdr.py  test_fenland_extractor.py  test_filters.py  test_fstat.py  test_harmonise.py  test_liftover.py  test_liftover_script.py  test_mr_methods_r.py  test_outcome.py  test_packaging_metadata.py  test_plink.py  test_r_gwas_sim_backends.py  test_schema.py  test_sharepro.py  test_simulated_pipeline_stress.py  test_sumstats_io.py  test_synapse_stream.py  test_ukb_female_extractor.py  test_ukbppp_extractor.py  test_yield_report.py
(+37 files in other folders)
