[project]
name = "leiomyoma-proteomics"
version = "0.1.0"
description = "Proteome-wide MR for uterine fibroids"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "pyliftover>=0.4",
    "pysam>=0.22",
    "tqdm>=4.67",
    "httpx>=0.27",
    "synapseclient>=4.5",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
